--- a/style/homepage.css
+++ b/style/homepage.css
@@ -1,23 +1,27 @@
 *,
 *::before,
 *::after {
-  padding: 0;
-  margin: 0;
-  font-family: inherit;
+  font-weight: inherit;
+  padding: inherit;
+  margin: inherit;
   font-size: inherit;
+  font-family: inherit;
 }
 
 body {
-  font-family: 'Bitter', serif;
+  font-family: "Bitter", serif;
   font-size: 62.5%;
-  overflow: auto;
+  padding: 0;
+  margin: 0;
+  font-weight: 500;
   background: linear-gradient(to right, #c6ffdd, #fbd786, #f7797d);
   background-size: 400% 400%;
   animation: gradient-anim;
   animation-duration: 10s;
+  animation-iteration-count: infinite;
 }
 
-@keyframes gradient {
+@keyframes gradient-anim {
   0% {
     background-position: 0% 50%;
   }
@@ -28,7 +32,6 @@ body {
     background-position: 0% 50%;
   }
 }
-
 .navbar {
   height: 5rem;
   margin: 2rem 0;
@@ -37,7 +40,6 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 .navbar p {
   color: transparent;
   font-weight: bolder;
@@ -49,15 +51,54 @@ body {
   border-collapse: collapse;
   margin: 0 auto;
 }
-
+.user-data thead tr {
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(20px);
+  color: #ffffff;
+  text-align: left;
+  font-weight: 500;
+}
+.user-data thead tr td {
+  border-bottom: none;
+}
+.user-data thead tr td:first-child {
+  border-top-left-radius: 0.7rem;
+  border-bottom-left-radius: 0.7rem;
+}
+.user-data thead tr td:last-child {
+  border-top-right-radius: 0.7rem;
+  border-bottom-right-radius: 0.7rem;
+}
+.user-data tr {
+  transition: all 300ms;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+.user-data tr:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(1rem);
+}
+.user-data tr:first-child {
+  border-top-left-radius: 0.7rem;
+  border-bottom-left-radius: 0.7rem;
+}
+.user-data tr:last-child {
+  border-top-right-radius: 0.7rem;
+  border-bottom-right-radius: 0.7rem;
+}
 .user-data td {
   font-size: 1.3rem;
   color: rgba(0, 0, 0, 0.7);
-  border: 3px solid rgba(255, 255, 255, 0.5);
   padding: 0.5rem 0.7rem;
   text-align: center;
 }
-
+.user-data td:first-child {
+  border-top-left-radius: 0.7rem;
+  border-bottom-left-radius: 0.7rem;
+}
+.user-data td:last-child {
+  border-top-right-radius: 0.7rem;
+  border-bottom-right-radius: 0.7rem;
+}
 .user-data button {
   padding: 0.5rem;
   cursor: pointer;
@@ -68,7 +109,6 @@ body {
   transition: all 300ms;
   color: rgba(0, 0, 0, 0.8);
 }
-
 .user-data button:hover {
   background: rgba(255, 255, 255, 0.5);
 }
@@ -84,11 +124,10 @@ body {
     background-position: 0% 50%;
   }
 }
-
 ::-webkit-scrollbar {
   width: 12px;
-  background-color: transparent;
   z-index: 100;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
