--- a/style/viewUser.scss
+++ b/style/viewUser.scss
@@ -1,22 +1,6 @@
-*, *::before, *::after{
-    font-weight: inherit;
-    padding: inherit;
-    margin: inherit;
-    font-size: inherit;
-    font-family: inherit;
-}
+@import "variables";
 
-body{
-    font-family: 'Bitter', serif;
-    font-size: 62.5%;
-    padding: 0;
-    margin: 0;
-    font-weight: 500;
-    background: linear-gradient(to right, #c6ffdd, #fbd786, #f7797d);
-    background-size: 400% 400%;
-    animation: gradient;
-    animation-duration: 10s;
-}
+@include addBody;
 
 .navbar{
     font-size: 1.2rem;
