--- a/style/viewUser.scss
+++ b/style/viewUser.scss
@@ -2,64 +2,62 @@
 
 @include addBody;
 
-.navbar{
-    font-size: 1.2rem;
-    width: 100%;
-    text-align: right;
-    margin-top: 1.5rem;
-    margin-right: 2rem;
-    & a{
-        color: rgba($color: #000, $alpha: 0.6);
-        text-decoration: none;
+.navbar {
+	font-size: 1.2rem;
+	width: 100%;
+	text-align: right;
+	margin-top: 1.5rem;
+	margin-right: 2rem;
+	& a {
+		color: rgba($color: #000, $alpha: 0.8);
+		text-decoration: none;
+	}
+}
+
+main {
+	display: flex;
+	flex-grow: 1;
+	// flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-top: 1rem;
+	font-size: 1.7rem;
+}
+
+
+
+.user p {
+    &:not(:first-of-type){
+        color: rgba($color: #000, $alpha: 0.4);
     }
+    & span {
+		color: rgba($color: #000, $alpha: 1);
+	}
 }
 
-main{
-    display: flex;
-    flex-grow: 1;
-    // flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1rem;
-    font-size: 1.7rem;
-    color: rgba($color: #000, $alpha: 0.6);
-}
-
-.name{
+.name {
     font-size: 3.5rem;
-    color: transparent;
-    margin-bottom: 1rem;
-    font-weight: bolder;
-    -webkit-text-stroke: 1px rgba($color: #000, $alpha: 0.6);
+	color: transparent;
+	margin-bottom: 1rem;
+	font-weight: bolder;
+	-webkit-text-stroke: 1px rgba($color: #000, $alpha: 1);
 }
 
-.first-name{
-    margin-bottom: 1rem;
+.first-name {
+	margin-bottom: 1rem;
 }
 
-.last-name{
-    margin-bottom: 1rem;
+.last-name {
+	margin-bottom: 1rem;
 }
 
-.email{
-    margin-bottom: 1rem;
+.email {
+	margin-bottom: 1rem;
 }
-.point{
-    margin-bottom: 1rem;
-}
-
-.phone{
-    margin-bottom: 1rem;
+.point {
+	margin-bottom: 1rem;
 }
 
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+.phone {
+	margin-bottom: 1rem;
 }
