--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -41,3 +41,15 @@
 	}
 	@include animations;
 }
+
+@mixin scroll {
+	::-webkit-scrollbar {
+		width: 12px;
+		z-index: 100;
+		background-color: transparent;
+	}
+
+	::-webkit-scrollbar-thumb {
+		background-color: rgba(#000, 1);
+	}
+}
