--- a/style/editUser.css
+++ b/style/editUser.css
@@ -40,7 +40,7 @@ body {
   margin-right: 2rem;
 }
 .navbar a {
-  color: rgba(0, 0, 0, 0.8);
+  color: rgba(0, 0, 0, 0.6);
   text-decoration: none;
 }
 
@@ -50,14 +50,8 @@ main {
   align-items: center;
   justify-content: center;
   margin-top: 1rem;
-  font-size: 1.7rem;
-}
-
-.user p:not(:first-of-type) {
-  color: rgba(0, 0, 0, 0.4);
-}
-.user p span {
-  color: black;
+  font-size: 1.2rem;
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .name {
@@ -68,22 +62,47 @@ main {
   -webkit-text-stroke: 1px black;
 }
 
-.first-name {
-  margin-bottom: 1rem;
+.user div {
+  display: flex;
+  width: 110%;
+  align-items: center;
+}
+.user div p {
+  flex-grow: 1;
+}
+.user div input {
+  padding: 0.5rem;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  outline: none;
+  transition: all 400ms;
+}
+.user div input:focus {
+  border: 1px solid rgba(0, 0, 0, 0.7);
+  box-shadow: 0 0 5rem rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(30px);
+}
+.user button {
+  padding: 0.5rem;
+  cursor: pointer;
+  background-color: transparent;
+  margin: 5px;
+  margin-top: 2.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  transition: all 300ms;
+  color: rgba(0, 0, 0, 0.7);
+}
+.user button:hover {
+  background: rgba(255, 255, 255, 0.5);
 }
 
-.last-name {
-  margin-bottom: 1rem;
+::-webkit-scrollbar {
+  width: 12px;
+  z-index: 100;
+  background-color: transparent;
 }
 
-.email {
-  margin-bottom: 1rem;
-}
-
-.point {
-  margin-bottom: 1rem;
-}
-
-.phone {
-  margin-bottom: 1rem;
+::-webkit-scrollbar-thumb {
+  background-color: black;
 }
