--- a/style/homepage.scss
+++ b/style/homepage.scss
@@ -96,12 +96,4 @@
 
 @include animations;
 
-::-webkit-scrollbar {
-	width: 12px;
-	z-index: 100;
-	background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-	background-color: rgba(#000, 1);
-}
+@include scroll;
